--- a/index.html
+++ b/index.html
@@ -3,103 +3,114 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
 	<title>Aaron Zhang</title>
 </head>
 <body>
 	<div id="showcase">
-		<div id="circle">
+		<div id="circle" class="w3-animate-zoom">
 			<h1 class="title is-1 slideUp">Hey There!</h1>
 			<h2 class="subtitle is-2 fadeIn">I'm Aaron Zhang</h2>
 		</div>
 	</div>
 
 	<div class="container" id="mainBody">
-		<div class="block">
-			<div class="columns">
-				<span id="openNav" onclick="openNav()">&#9776;</span>
-				<div class="column is-3">
-					<aside class="menu" id="sideNav">
-					    <p class="menu-label">General</p>
-					    <ul class="menu-list">
-					    	<li><a>About Me</a></li>
-					    </ul>
+		<div class="columns">
+			<span id="openNav">&#9776;</span>
+			<div class="column is-3">
+				<aside class="menu box" id="sideNav">
+					<span id="closeNav">&times;</span>
+				    <p class="menu-label">General</p>
+				    <ul class="menu-list">
+				    	<li><a>About Me</a></li>
+				    </ul>
 
-					  	<p class="menu-label">Projects</p>
-					    <ul class="menu-list">
-					    	<li><a>Hackathons</a>
-						      	<ul>
-							        <li><a>Snowday Alarm</a></li>
-							        <li><a>QuickMeds</a></li>
-							        <li><a>Hack the North</a></li>
-							    </ul>
-							</li>
-						    <li><a>School/Side</a>
-						      	<ul>
-							        <li><a>Coding Buddies</a></li>
-							        <li><a>Pygame</a></li>
-							        <li><a>Minesweeper</a></li>
-							    </ul>
-							</li>
-					    </ul>
+				  	<p class="menu-label">Projects</p>
+				    <ul class="menu-list">
+				    	<li><a>Hackathons</a>
+					      	<ul>
+						        <li><a>Snowday Alarm</a></li>
+						        <li><a>QuickMeds</a></li>
+						        <li><a>Hack the North</a></li>
+						    </ul>
+						</li>
+					    <li><a>School/Side</a>
+					      	<ul>
+						        <li><a>Coding Buddies</a></li>
+						        <li><a>Pygame</a></li>
+						        <li><a>Minesweeper</a></li>
+						    </ul>
+						</li>
+				    </ul>
 
-						<p class="menu-label">Volunteering</p>
-						<ul class="menu-list">
-							<li><a>Vacation Bible School (VBS)</a></li>
-							<li><a>Hallelujah Party</a></li>
-							<li><a>Coding Buddies</a></li>
-						</ul>
+					<p class="menu-label">Volunteering</p>
+					<ul class="menu-list">
+						<li><a>Vacation Bible School (VBS)</a></li>
+						<li><a>Hallelujah Party</a></li>
+						<li><a>Coding Buddies</a></li>
+					</ul>
 
-						<p class="menu-label">Contact</p>
-						<ul class="menu-list">
-							<li><a>Email</a></li>
-							<li><a>Phone</a></li>
-							<li><a>Facebook</a></li>
-							<li><a>Github</a></li>
-						</ul>
-					</aside>
+					<p class="menu-label">Contact</p>
+					<ul class="menu-list">
+						<li><a>Email</a></li>
+						<li><a>Phone</a></li>
+						<li><a>Github</a></li>
+					</ul>
+				</aside>
+			</div>
+			<div class="column">
+				<div class="block columns">
+					<div class="column is-8">
+						<h2 class="is-2">Some Things To Know About Me!</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="column">
+						<img src="images/profile.jpg" id="me">
+					</div>
 				</div>
-				<div class="column">
-					<div class="block">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div class="block">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div class="block">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div class="block">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div class="block">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
+				<div class="block">
+					<h2 class="is-2">What I've Made</h2>
+					<h3 class="is-3">Hackathon Projects</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. </p>
+					<h3 class="is-3">School/Personal Projects</h3>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="block">
+					<h2 class="is-2">Volunteering Experience</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="block">
+					<h2 class="is-2">Contact</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="block">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 			</div>
 		</div>
