--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="showcase">
 		<div id="circle" class="w3-animate-zoom">
 			<h1 class="title is-1 slideUp">Hey There!</h1>
-			<h2 class="subtitle is-2 fadeIn">I'm Aaron Zhang</h2>
+			<h2 class="subtitle is-2 w3-animate-opacity">I'm Aaron Zhang</h2>
 		</div>
 	</div>
 
