--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="columns">
 			<span id="openNav">&#9776;</span>
 			<div class="column is-3">
-				<aside class="menu box" id="sideNav">
+				<div class="box" id="sideNav">
 					<span id="closeNav">&times;</span>
 				    <p class="menu-label">General</p>
 				    <ul class="menu-list">
@@ -57,7 +57,7 @@
 						<li><a>Phone</a></li>
 						<li><a>Github</a></li>
 					</ul>
-				</aside>
+				</div>
 			</div>
 			<div class="column">
 				<div class="block columns">
@@ -76,15 +76,56 @@
 				</div>
 				<div class="block">
 					<h2 class="is-2">What I've Made</h2>
-					<h3 class="is-3">Hackathon Projects</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. </p>
-					<h3 class="is-3">School/Personal Projects</h3>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3 class="is-3 has-text-centered">Hackathon Projects</h3>
+					<hr>
+					<div class="columns projectSection">
+						<section class="column project box">
+							<img src="images/hammer.jpg" class="projectImg">
+							<h4 class="is-4">Snow Day Alarm</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+						</section>
+						<section class="column project box">
+							<img src="images/wolf.png" class="projectImg">
+							<h4 class="is-4">QuickMeds</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+						</section>
+						<section class="column project box">
+							<img src="images/north.png" class="projectImg">
+							<h4 class="is-4">Something</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+						</section>
+					</div>
+					<h3 class="is-3 has-text-centered">School/Personal Projects</h3>
+					<hr>
+					<div class="columns projectSection">
+						<section class="column project box">
+							<img src="images/coding.png" class="projectImg">
+							<h4 class="is-4">Coding Buddies</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+						</section>
+						<section class="column project box">
+							<img src="images/jump.png" class="projectImg">
+							<h4 class="is-4">Shape Friends Pygame</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+						</section>
+						<section class="column project box">
+							<img src="images/minesweeper.jpg" class="projectImg">
+							<h4 class="is-4">Minesweeper (C++)</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+						</section>
+					</div>
 				</div>
 				<div class="block">
 					<h2 class="is-2">Volunteering Experience</h2>
