Links to Github Projects

--- a/index.html
+++ b/index.html
@@ -80,21 +80,27 @@
 					<hr>
 					<div class="columns projectSection">
 						<section class="column project box">
-							<img src="images/hammer.jpg" class="projectImg">
+							<a href="https://github.com/AaronZhang314/Hack-the-Hammer" target="_blank">
+								<img src="images/hammer.jpg" class="projectImg">
+							</a>
 							<h4 class="is-4">Snow Day Alarm</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 						</section>
 						<section class="column project box">
-							<img src="images/wolf.png" class="projectImg">
+							<a href="https://github.com/AaronZhang314/QuickMeds" target="_blank">
+								<img src="images/wolf.png" class="projectImg">
+							</a>
 							<h4 class="is-4">QuickMeds</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 						</section>
 						<section class="column project box">
-							<img src="images/north.png" class="projectImg">
+							<a href="">
+								<img src="images/north.png" class="projectImg">
+							</a>
 							<h4 class="is-4">Something</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -105,21 +111,27 @@
 					<hr>
 					<div class="columns projectSection">
 						<section class="column project box">
-							<img src="images/coding.png" class="projectImg">
+							<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank"">
+								<img src="images/coding.png" class="projectImg">
+							</a>
 							<h4 class="is-4">Coding Buddies</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 						</section>
 						<section class="column project box">
-							<img src="images/jump.png" class="projectImg">
+							<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
+								<img src="images/jump.png" class="projectImg">
+							</a>
 							<h4 class="is-4">Shape Friends Pygame</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 						</section>
 						<section class="column project box">
-							<img src="images/minesweeper.jpg" class="projectImg">
+							<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
+								<img src="images/minesweeper.jpg" class="projectImg">
+							</a>
 							<h4 class="is-4">Minesweeper (C++)</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -155,7 +167,7 @@
 				</div>
 			</div>
 		</div>
-		<div style="margin-top:700px"></div>
+		<div style="margin-top:300px"></div>
 	</div>
 
 	<script src="js/main.js"></script>
