--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="column">
+			<div class="column" id="pageBody">
 				<div class="block columns">
 					<div class="column is-8">
 						<h2 class="is-2">Some Things To Know About Me!</h2>
@@ -90,7 +90,7 @@
 						</section>
 						<section class="column project box">
 							<a href="https://github.com/AaronZhang314/QuickMeds" target="_blank">
-								<img src="images/wolf.png" class="projectImg">
+								<img src="images/wolf.png" class="projectImg whiteSpace">
 							</a>
 							<h4 class="is-4">QuickMeds</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -99,7 +99,7 @@
 						</section>
 						<section class="column project box">
 							<a href="">
-								<img src="images/north.png" class="projectImg">
+								<img src="images/north.png" class="projectImg whiteSpace">
 							</a>
 							<h4 class="is-4">Something</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -138,6 +138,8 @@
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 						</section>
 					</div>
+
+					
 				</div>
 				<div class="block">
 					<h2 class="is-2">Volunteering Experience</h2>
