--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 <body>
 	<div id="showcase" class="shadow">
-		<div id="circle" class="animated zoomIn">
+		<div id="circle" class="wow zoomIn" data-wow-delay="0.3s">
 			<div id="showcaseText">
-				<h1 class="animated rollIn">Hey There!</h1>
-				<h2 class="animated fadeIn">I'm <span class="name">Aaron Zhang</span></h2>
+				<h1 class="wow rollIn" data-wow-delay="0.5s">Hey There!</h1>
+				<h2 class="wow fadeIn" data-wow-delay="0.8s">I'm <span class="name">Aaron Zhang</span></h2>
 			</div>
 		</div>
 	</div>
@@ -52,7 +52,7 @@
 		<div class="row">
 			<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
 				<div class="project shadow">
-					<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank">
+					<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
 						<img src="images/hammer.jpg" class="img-fluid">
 						<h4>Snow Day Alarm</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -63,7 +63,7 @@
 			</div>
 			<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
 				<div class="project shadow">
-					<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
+					<a href="https://devpost.com/software/quick-meds" target="_blank">
 						<img src="images/wolf.png" class="img-fluid">
 						<h4>QuickMeds</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -74,7 +74,7 @@
 			</div>
 			<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
 				<div class="project shadow">
-					<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
+					<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
 						<img src="images/north.png" class="img-fluid">
 						<h4>XChange</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
