--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 
     <script src="js/main.js"></script>
+    <script src="js/copyClipboard.js"></script>
 	<script href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	<script href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
-	<script src="js/opacity.js"></script>
+	
 	<script>
 	  	new WOW().init();
 	 </script>
@@ -20,14 +21,21 @@
 </head>
 <body>
 	<div id="showcase" class="shadow">
-		
-			<div id="circle" class="wow zoomIn" data-wow-delay="0.3s">
-				<div id="showcaseText">
-					<h1 class="wow rollIn" data-wow-delay="0.5s">Hey There!</h1>
-					<h2 class="wow fadeIn" data-wow-delay="0.8s">I'm <span class="name">Aaron Zhang</span></h2>
-				</div>
+		<div id="circle" class="wow zoomIn" data-wow-delay="0.3s">
+			<div id="showcaseText">
+				<h1 class="wow rollIn" data-wow-delay="0.5s">Hey There!</h1>
+				<h2 class="wow fadeIn" data-wow-delay="0.8s">I'm <span class="name">Aaron Zhang</span></h2>
 			</div>
-		<div class="headerOverlay"></div>
+			<div class="icons">
+				<hr class="nameHr">
+				<a href="https://github.com/AaronZhang314" target="_blank" class="icon">
+					<img src="images/github.png" height="25" width="auto">
+				</a>
+				<a href="https://devpost.com/AaronZhang314" target="_blank" class="icon">
+					<img src="images/devpost.png" height="25" width="auto">
+				</a>
+			</div>
+		</div>
 	</div>
 
 
@@ -36,6 +44,7 @@
 		<div class="row">
 			<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
 				<h2>A Little About Me!</h2>
+				<hr class="headerLine blueHr wow slideInLeft">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -44,11 +53,12 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="images/profile.jpg" id="me" class="wow rotateInDownRight" data-wow-duration="1s">
+				<img src="images/profile.jpg" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
 			</div>
 		</div>
 		<div class="wow fadeIn" data-wow-delay="0.5s">
 			<h2>My Projects</h2>
+			<hr class="headerLine redHr wow slideInLeft">
 			<h3>Hackathons</h3>
 			<hr>
 		</div>
@@ -128,7 +138,8 @@
 		</div>
 		
 		<div class="wow fadeIn" data-wow-delay="0.5s">
-			<h2>Volunteering Experience</h2>
+			<h2>Volunteering</h2>
+			<hr class="headerLine orangeHr wow slideInLeft">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -138,12 +149,17 @@
 		</div>
 		<div class="wow fadeIn" data-wow-delay="0.5s">
 			<h2>Contact</h2>
+			<hr class="headerLine greenHr wow slideInLeft">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<input type="text" value="aaronzhang314@gmail.com" id="email">
+			<button onclick="copy()">Copy Email</button>
+			<p>Phone: <span class="phone">416-627-6468</span></p>
+
 		</div>
 
 	</div>
