--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<title>Aaron Zhang</title>
 </head>
 <body>
-	<div id="showcase" class="shadow">
+	<div id="showcase">
 		<div id="circle" class="wow zoomIn" data-wow-delay="0.3s">
 			<div id="showcaseText">
 				<h1 class="wow rollIn" data-wow-delay="0.5s">Hey There!</h1>
@@ -39,12 +39,90 @@
 	</div>
 
 
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
-				<h2>A Little About Me!</h2>
-				<hr class="headerLine blueHr wow slideInLeft">
+	<div class="container-fluid main">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
+					<h2>A Little About Me!</h2>
+					<hr class="headerLine blueHr wow slideInLeft">
+					<p>Hi, I am Aaron Zhang! Currently I am a Grade 12 student attending Glenforest Secondary School. I like to do stuff.</p>
+				</div>
+				<div class="col-md-4">
+					<img src="images/profile.jpg" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
+				</div>
+			</div>
+			<div class="wow fadeIn" data-wow-delay="0.5s">
+				<h2>My Projects</h2>
+				<hr class="headerLine redHr wow slideInLeft">
+				<h3>Hackathons</h3>
+				<hr>
+			</div>
+			<div class="row">
+				<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
+					<div class="project shadow">
+						<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
+							<img src="images/north.png" class="img-fluid">
+							<h4>XChange</h4>
+							<p>XChange helps travelers to track their budget in their native currency and locates best exchange station rates in the area using crowd-sourced data.</p>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
+					<div class="project shadow">
+						<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
+							<img src="images/hammer.jpg" class="img-fluid">
+							<h4>Snow Day Alarm</h4>
+							<p>An alarm that checks the school region's live twitter that automatically disables your alarm on snowdays!</p>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
+					<div class="project shadow">
+						<a href="https://devpost.com/software/quick-meds" target="_blank">
+							<img src="images/wolf.png" class="img-fluid">
+							<h4>QuickMeds</h4>
+							<p>An experimental concept of providing a smarter and more efficient way to get in touch with emergency medical services</p>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="wow fadeIn" data-wow-delay="0.5s">
+				<h3>School/Personal</h3>
+				<hr>
+			</div>
+			<div class="row"> 
+				<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
+					<div class="project shadow">
+						<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank"">
+							<img src="images/coding.png" class="img-fluid">
+							<h4>Coding Buddies</h4>
+							<p>A learning resource that teaches Python for younger programmers</p>
+						</a>
+					</div>
+				</div> 
+				<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
+					<div class="project shadow">
+						<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
+							<img src="images/jump.png" class="img-fluid">
+							<h4>Shape Friends Pygame</h4>
+							<p>A platformer made in Pygame (Python)</p>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
+					<div class="project shadow">
+						<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
+							<img src="images/minesweeper.jpg" class="img-fluid">
+							<h4>Minesweeper (C++)</h4>
+							<p>A recreation of the classic game, Minesweeper, played in the C++ console</p>
+						</a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="wow fadeIn" data-wow-delay="0.5s">
+				<h2>Volunteering</h2>
+				<hr class="headerLine orangeHr wow slideInLeft">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -52,113 +130,19 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
-			<div class="col-md-4">
-				<img src="images/profile.jpg" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
+			<div class="wow fadeIn" data-wow-delay="0.5s">
+				<h2>Contact</h2>
+				<hr class="headerLine greenHr wow slideInLeft">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 			</div>
-		</div>
-		<div class="wow fadeIn" data-wow-delay="0.5s">
-			<h2>My Projects</h2>
-			<hr class="headerLine redHr wow slideInLeft">
-			<h3>Hackathons</h3>
-			<hr>
-		</div>
-		<div class="row">
-			<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
-				<div class="project shadow">
-					<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
-						<img src="images/north.png" class="img-fluid">
-						<h4>XChange</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
-				<div class="project shadow">
-					<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
-						<img src="images/hammer.jpg" class="img-fluid">
-						<h4>Snow Day Alarm</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
-				<div class="project shadow">
-					<a href="https://devpost.com/software/quick-meds" target="_blank">
-						<img src="images/wolf.png" class="img-fluid">
-						<h4>QuickMeds</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="wow fadeIn" data-wow-delay="0.5s">
-			<h3>School/Personal</h3>
-			<hr>
-		</div>
-		<div class="row"> 
-			<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
-				<div class="project shadow">
-					<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank"">
-						<img src="images/coding.png" class="img-fluid">
-						<h4>Coding Buddies</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-					</a>
-				</div>
-			</div> 
-			<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
-				<div class="project shadow">
-					<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
-						<img src="images/jump.png" class="img-fluid">
-						<h4>Shape Friends Pygame</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
-				<div class="project shadow">
-					<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
-						<img src="images/minesweeper.jpg" class="img-fluid">
-						<h4>Minesweeper (C++)</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-					</a>
-				</div>
-			</div>
-		</div>
-		
-		<div class="wow fadeIn" data-wow-delay="0.5s">
-			<h2>Volunteering</h2>
-			<hr class="headerLine orangeHr wow slideInLeft">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		<div class="wow fadeIn" data-wow-delay="0.5s">
-			<h2>Contact</h2>
-			<hr class="headerLine greenHr wow slideInLeft">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 		</div>
-
 	</div>
 	<footer class="container copyright">
     	<hr>
